@startuml

[*] --> Menu : Starts the game
Menu --> Options : Presses Options
Menu --> Quit : Presses Quit
Menu --> Multiplayer : Presses Multiplayer
Menu --> ChooseMap : Presses Play
Menu --> Tutorial : Presses Tutorial
Options --> Menu : Presses Go back
Multiplayer --> Menu : Presses Go back
ChooseMap --> Menu : Presses Go back
Tutorial --> Menu : Presses Go back
Multiplayer --> JoinLobby : Presses Join
Multiplayer --> ChooseMap : Presses Host
Multiplayer --> Highscores : Presses Highscore
JoinLobby --> Multiplayer : Presses Go back
JoinLobby --> InGame : Presses Join on a lobby
ChooseMap --> InGame : Presses on one of the maps
InGame --> GameOver : Game ends, the player(s) have no life left or the client has lost connection with the server
GameOver --> Menu : Presses Go back
Highscores --> Multiplayer : Presses Go back

Quit --> [*]

@enduml